--- a/jsfluencyloops/styles/styles.css
+++ b/jsfluencyloops/styles/styles.css
@@ -1,6 +1,6 @@
-*{
-    background-color: #4e6260
-    ;
+body{
+    background-color: #4e6260;
+    font-family: 'Amatic SC', cursive;
 }
 
 .container {
@@ -11,8 +11,35 @@
 h1 {
     grid-column-start: 1;
     grid-column-end: 4;
-    font-family: 'Lobster', cursive;
+    font-family: 'Dancing Script', cursive;
     text-align: center;
     color: #C5F5F0;
     font-size: 3rem;
+}
+
+#today {
+    grid-column-start: 1;
+    grid-column-end: 2;
+    margin-left: 2rem;
+    border: 2px dashed #C5F5F0;
+    text-align: center;
+}
+
+h2 {
+    font-size: 2.5rem;
+    margin: 0;
+    color: #f1fdfb;
+}
+
+#currentDate, #currentDay {
+    font-weight: bold;
+    color: #f5c5ca;
+}
+
+#currentDay {
+    font-size: 2.2rem;
+}
+
+#currentDate {
+    font-size: 1.5rem;
 }
