--- a/jsfluencyloops/styles/styles.css
+++ b/jsfluencyloops/styles/styles.css
@@ -119,3 +119,33 @@ ul {
 .show {
     display: block;
 }
+
+/******************Number Guessing*******************/
+.guessing {
+    grid-column-start: 3;
+    grid-column-end: 4;
+    grid-row-start: 2;
+    grid-row-end: 8;
+    margin-top: 0;
+    margin-bottom: 0;
+    border: 2px dashed #C5F5F0;
+    text-align: center;
+    font-family: 'Shadows Into Light', cursive;
+
+}
+
+h3 {
+    font-size: 2rem;
+    margin: 0;
+    color: #f1fdfb;
+}
+
+.guessing p {
+    font-size: 1.2rem;
+    margin: 0;
+    color: #f5c5ca;
+}
+
+.guessing p:nth-child(3) {
+    color: #f1fdfb;
+}
