--- a/jsfluencyloops/styles/styles.css
+++ b/jsfluencyloops/styles/styles.css
@@ -85,14 +85,13 @@ h2 {
 
 ul {
     list-style: none;
-    padding:0;
+    padding: 0;
     display: flex;
     flex-flow: column;
 }
 
 #myDropdown li {
     padding: .2rem;
-
 }
 
 .dropdown-content {
@@ -121,6 +120,7 @@ ul {
 }
 
 /******************Number Guessing*******************/
+
 .guessing {
     grid-column-start: 3;
     grid-column-end: 4;
@@ -131,7 +131,6 @@ ul {
     border: 2px dashed #C5F5F0;
     text-align: center;
     font-family: 'Shadows Into Light', cursive;
-
 }
 
 h3 {
@@ -149,3 +148,81 @@ h3 {
 .guessing p:nth-child(3) {
     color: #f1fdfb;
 }
+
+/************************Animal Sorting***************/
+
+.animals {
+    grid-column-start: 1;
+    grid-column-end: 4;
+    grid-row-start: 4;
+    grid-row-end: 10;
+    margin-left: 2rem;
+    margin-top: 0;
+    margin-bottom: 0;
+    border: 2px dashed #C5F5F0;
+    text-align: center;
+    font-family: 'Noticia Text', serif;
+    display: grid;
+    grid-template-columns: 3fr 2fr 2fr 2fr;
+    text-align: center;
+}
+
+.animals h2 {
+    grid-column-start: 1;
+    grid-column-end: 5;
+    font-family: 'Amatic SC', cursive;
+    margin-bottom: 2rem;
+}
+
+.animals h3{
+    font-family: 'Amatic SC', cursive;
+    color: #C5F5F0;
+}
+
+.info {
+    grid-column-start: 1;
+    grid-column-end: 2;
+    border-right: 2px dashed #C5F5F0;
+    text-align: justify;
+}
+
+#noah {
+    color: #C5F5F0;
+    font-size: 1.1rem;
+    padding: .75rem;
+    margin-top: 0;
+    margin-bottom: 0;
+    padding-top: 0;
+}
+
+#direction {
+    font-style: italic;
+    font-size: .85rem;
+    padding: .2rem;
+}
+
+#animalList {
+    text-align: justify;
+    color: #f5c5ca;
+    font-size: 1.3rem;
+    font-weight: bold;
+    margin-top: 0;
+    padding-top: 0;
+    margin-left: 8rem;
+    margin-right: 8rem;
+}
+
+.animalbtn {
+    margin:0 8rem 2rem 8rem;
+}
+
+.mammals, .reptiles {
+    border-right: 2px dashed #C5F5F0;
+}
+
+.animalSort p{
+    color:#f5c5ca;
+    font-size: 1.1rem;
+
+}
+
