--- a/jsfluencyloops/styles/styles.css
+++ b/jsfluencyloops/styles/styles.css
@@ -3,6 +3,7 @@ body {
     font-family: 'Amatic SC', cursive;
 }
 
+
 /***************Grid Container************/
 
 .container {
@@ -139,7 +140,7 @@ h3 {
     color: #f1fdfb;
 }
 
-.guessing p {
+.guessing p:not(.topic) {
     font-size: 1.2rem;
     margin: 0;
     color: #f5c5ca;
@@ -220,9 +221,15 @@ h3 {
     border-right: 2px dashed #C5F5F0;
 }
 
-.animalSort p{
+.animalSort p:not(.topic){
     color:#f5c5ca;
     font-size: 1.1rem;
 
+}
+.topic {
+    color: #f1fdfb;
+    font-size: 1rem;
+    font-family: 'Noticia Text', serif;
+    text-align: center;
 }
 
