--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,53 +1,87 @@
-* { margin: 0; box-sizing: border-box; } 
+* {
+    margin: 0;
+    box-sizing: border-box;
+}
 
-body { 
-    font-size: 16px; 
+body {
+    font-size: 16px;
     line-height: 32px;
-    font-family: Courier New, sans-serif;
-    color: rgb(21, 60, 73);
+    font-family: 'Noticia Text', serif;
+    background-color: #94a09f;
+}
+
+.container {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    margin: 1.25em auto;
+    padding: .5rem;
+    max-width: 90%;
 }
 
 h1 {
     font-size: 1.5em;
     color: white;
+    text-align: right;
+    background-color: #4e6260;
+    padding: .7rem;
+    grid-column-start: 1;
+    grid-column-end: 4;
 }
 
 h2 {
-    font-size: 1.25em;
+    font-size: 3rem;
+    font-family: 'Shadows Into Light', cursive;
     text-align: center;
-    color: rgb(21, 60, 73);
-    border-bottom: 1px solid #bbb;
+    color: #f1fdfb;
+    padding: 1rem;
+    border-bottom: 1px solid #4e6260;
+    grid-column-start: 1;
+    grid-column-end: 4;
 }
 
-header, main, footer {
-    margin: 1.25em auto;
+.topics {
     padding: .5rem;
-    max-width: 75%;
+    margin: .5rem;
+    border-right: 3px solid #4e6260;
 }
 
-li {
-    color: black;
-}
-
-header, footer, footer a {
+.topics h3 {
+    font-family: 'Shadows Into Light', cursive;
+    font-size: 4rem;
+    color: #f5c5ca;
     text-align: center;
-    background-color: rgb(21, 60, 73);
-    color: whitesmoke;
+    padding: .25rem;
+    margin-bottom: 1.25rem;
 }
 
-header img {
-    width: 18%;
-    height: auto;
-    float: right;
-}
-.style1 {
-    margin: 0 auto;
-    border: 1px solid #bbb;
-    padding: 5px;
-    background-color: #eee;
-    line-height: 1.5em;
+.topics p {
+    color: #f1fdfb;
+    font-size: 1.2rem;
 }
 
-footer {
-    font-size: .95em;
+.topic1 {
+    grid-column-start: 1;
+    grid-column-end: 2;
+}
+
+.topic2 {
+    grid-column-start: 2;
+    grid-column-end: 3;
+}
+
+button {
+    background-color: #4e6260;
+    color: #f1fdfb;
+    border: none;
+    padding: .5rem;
+    margin: 1rem;
+}
+
+button a {
+    color: white;
+    font-size: 1rem;
+}
+
+button a:link {
+    text-decoration: none;
 }
