--- a/consumejson/styles/styles.css
+++ b/consumejson/styles/styles.css
@@ -8,13 +8,13 @@ body {
 
 .container {
     display: grid;
-    grid-template-columns: repeat(3, 2fr);
+    grid-template-columns: repeat(2, 2fr);
     grid-gap: 1.25rem;
 }
 
 h1{
     grid-column-start: 1;
-    grid-column-end: 4;
+    grid-column-end: 3;
     font-family: 'Dancing Script', cursive;
     text-align: center;
     color: #C5F5F0;
@@ -30,4 +30,12 @@ h1 a:link {
 
 h1 a:visited{
     color: #C5F5F0;
+}
+
+/*********************Town Selection***************/
+.townSelect {
+    grid-column-start: 1;
+    grid-column-end: 2;
+    border-right: 2px dashed #C5F5F0;
+
 }
