--- a/dom/styles/styles.css
+++ b/dom/styles/styles.css
@@ -40,7 +40,7 @@ h2 {
 }
 .sections{
     border-right: 2px dashed #C5F5F0;
-    margin: 1rem;
+    margin: .5rem;
     padding: .25rem;
 } 
 
@@ -124,6 +124,23 @@ h2 {
 .section5 p:nth-child(5) {
     color: #f1fdfb;
 }
+
+/***********************Remove ELements*******************/
+
+.section6{
+    grid-column-start: 3;
+    grid-column-end: 4;
+}
+
+.section6 p:nth-child(3), #todo3, p:nth-child(10){
+    color: #f5c5ca;
+}
+
+.section6 p:last-of-type {
+    color: #f1fdfb;
+}
+
+
 
 
 
