--- a/csswithjs/styles/styles.css
+++ b/csswithjs/styles/styles.css
@@ -55,10 +55,12 @@ p {
     grid-column-start: 1;
     grid-column-end: 2;
     border-right: 2px dashed #C5F5F0;
-   text-align: center;
+    text-align: center;
 }
 
 .text p {
     color: black;
     font: 14px sans-serif;
+    text-align: right;
 }
+
