--- a/standardjsevents/styles/styles.css
+++ b/standardjsevents/styles/styles.css
@@ -7,11 +7,11 @@ body {
 
 .container {
     display: grid;
-    grid-template-columns: repeat(2, 2fr);
+    grid-template-columns: repeat(2, 1fr);
     grid-gap: 1.25rem;
 }
 
-h1{
+h1 {
     grid-column-start: 1;
     grid-column-end: 3;
     font-family: 'Dancing Script', cursive;
@@ -23,11 +23,12 @@ h1{
 h1 a {
     color: #C5F5F0;
 }
+
 h1 a:link {
     text-decoration: none;
 }
 
-h1 a:visited{
+h1 a:visited {
     color: #C5F5F0;
 }
 
@@ -43,7 +44,7 @@ h3 {
     color: #C5F5F0;
     font-family: 'Dancing Script', cursive;
     font-size: 3rem;
-    text-align:center;
+    text-align: center;
     margin-top: 0;
 }
 
@@ -53,19 +54,33 @@ p {
 }
 
 /*********************Color Selection***************/
+
 .changes {
     grid-column-start: 1;
     grid-column-end: 2;
     border-right: 2px dashed #C5F5F0;
     display: grid;
-    grid-template-columns: 1fr 1fr;
+    grid-template-columns: repeat(3, 1fr);
     grid-column-gap: 1rem;
-
 }
 
-.changes h2 {
+.changes h2:first-child {
     grid-column-start: 1;
+    grid-column-end: 2;
+    padding: 1rem;
+    margin-top: 0;
+}
+
+.changes h2:nth-child(2) {
+    grid-column-start: 2;
     grid-column-end: 3;
+    padding: 1rem;
+    margin-top: 0;
+}
+
+.changes h2:nth-child(3) {
+    grid-column-start: 3;
+    grid-column-end: 4;
     padding: 1rem;
     margin-top: 0;
 }
@@ -74,16 +89,26 @@ p {
     grid-column-start: 1;
     grid-column-end: 2;
     border-right: 2px dashed #C5F5F0;
+}
 
+.changes .newChoices {
+    grid-column-start: 2;
+    grid-column-end: 3;
+    border-right: 2px dashed #C5F5F0;
 }
 
 .changes .results {
-    grid-column-start: 2;
-    grid-column-end: 3;
+    grid-column-start: 3;
+    grid-column-end: 4;
     margin-left: 25%;
     margin-right: 25%;
 }
 
 .changes #selection {
-    margin-left: 50%;
+    margin-left: 25%;
+    margin-right: 25%;
+}
+.changes button {
+    margin-left: 7%;
+    margin-right: 7%;
 }
