--- a/standardjsevents/styles/styles.css
+++ b/standardjsevents/styles/styles.css
@@ -7,13 +7,13 @@ body {
 
 .container {
     display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    grid-gap: 1.25rem;
+    grid-template-columns: repeat(4, 1fr);
+
 }
 
 h1 {
     grid-column-start: 1;
-    grid-column-end: 3;
+    grid-column-end: 5;
     font-family: 'Dancing Script', cursive;
     text-align: center;
     color: #C5F5F0;
@@ -38,6 +38,7 @@ h2 {
     font-size: 2.5rem;
     color: #f5c5ca;
     margin-bottom: .2rem;
+    margin-top: 0;
 }
 
 h3 {
@@ -53,83 +54,59 @@ p {
     margin-left: .5rem;
 }
 
-/*********************Color Selection***************/
+/*********************onChange***************/
 
 .changes {
     grid-column-start: 1;
-    grid-column-end: 4;
-    border-right: 2px dashed #C5F5F0;
-    display: grid;
-    grid-template-columns: repeat(4, 1fr);
-    grid-column-gap: 1rem;
-}
-
-.changes h2:first-child {
-    grid-column-start: 1;
-    grid-column-end: 2;
-    padding: 1rem;
-    margin-top: 0;
-}
-
-.changes h2:nth-child(2) {
-    grid-column-start: 2;
-    grid-column-end: 3;
-    padding: 1rem;
-    margin-top: 0;
-}
-
-.changes h2:nth-child(3) {
-    grid-column-start: 3;
-    grid-column-end: 4;
-    padding: 1rem;
-    margin-top: 0;
-}
-.changes h2:nth-child(4) {
-    grid-column-start: 4;
-    grid-column-end: 5;
-    padding: 1rem;
-    margin-top: 0;
-}
-
-.changes .choices {
-    grid-column-start: 1;
     grid-column-end: 2;
     border-right: 2px dashed #C5F5F0;
+    text-align: center;
 }
 
-.changes .newChoices {
+
+/*********************onClick***************/
+.newChoices {
     grid-column-start: 2;
     grid-column-end: 3;
     border-right: 2px dashed #C5F5F0;
-}
-.changes .moreChoices {
-    grid-column-start: 3;
-    grid-column-end: 4;
-    border-right: 2px dashed #C5F5F0;
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
+    text-align: center;
 }
 
-.moreChoices .info{
-    grid-column-start: 1;
-    grid-column-end: 4;
-}
-
-.moreChoices p {
-    margin-right: .5rem;
-}
-.changes .results {
-    grid-column-start: 4;
-    grid-column-end: 5;
-    margin-left: 25%;
-    margin-right: 25%;
-}
-
-.changes #selection {
-    margin-left: 25%;
-    margin-right: 25%;
-}
-.changes button {
+.newChoices button {
     margin-left: 5%;
     margin-right: 5%;
+}
+
+/*********************Mouse Over***************/
+.moreChoices {
+    grid-column-start: 3;
+    grid-column-end: 4;
+    border-right: 2px dashed #C5F5F0;
+    text-align: center;
+}
+
+span {
+    padding: .5rem;
+}
+
+/*********************Results***************/
+.box {
+    grid-column-start: 4;
+    grid-column-end: 5;
+}
+
+.results {
+    margin-left: 25%;
+    margin-right: 25%;
+    width: 10rem;
+    height: 5rem;
+}
+
+/*********************KeyDown***************/
+.keyUp {
+    grid-column-start: 1;
+    grid-column-end: 2;
+    border-right: 2px dashed #C5F5F0;
+    text-align: center;
+    margin-top: 1rem;
 }
