--- a/css3transitions/styles/styles.css
+++ b/css3transitions/styles/styles.css
@@ -137,3 +137,28 @@ p {
     background-color: #f1fdfb;
     transition: all 8.0s ease-in-out 2s;
 }
+
+/*********************Transition Zoom***************/
+
+.zoom {
+    grid-column-start: 3;
+    grid-column-end: 3;
+    text-align: center;
+    font-size: 7px;
+}
+
+.zoom #box7 {
+    height: 3rem;
+    width: 10rem;
+    margin: auto;
+    padding: .5rem;
+    background-color: #f1fdfb;
+    transition: all 2.0s ease;
+}
+
+.zoom #box7:hover {
+    height: 10rem;
+    width: 20rem;
+    font-size: 2rem;
+}
+
