--- a/css3animations/styles/styles.css
+++ b/css3animations/styles/styles.css
@@ -232,3 +232,31 @@ p.info {
         transform: rotate(360deg);
     }
 } 
+
+/*********************Animations Bounce***************/
+
+.bounce {
+    grid-column-start: 1;
+    grid-column-end: 2;
+    border-right: 2px dashed #C5F5F0;
+    text-align: center;
+}
+
+.bounce #circle2 {
+    background-color: #C5F5F0;
+    width: 3rem;
+    height: 3rem;
+    border-radius: 50%;
+    margin: auto;
+    margin-top: 1.25rem;
+    animation: bounce 1s infinite;
+}
+
+@keyframes bounce {
+    0%, 100% {
+        transform: translateY(0);
+      }
+      50% {
+        transform: translateY(-15px);
+      }
+}
