--- a/css3animations/styles/styles.css
+++ b/css3animations/styles/styles.css
@@ -69,23 +69,17 @@ p.info {
 
 .colors #square {
     background-color: #C5F5F0;
-    width: 10rem;
-    height: 10rem;
+    width: 8rem;
+    height: 8rem;
     margin: auto;
     margin-top: 1.25rem;
-    animation: pulse 4s 2;
+    animation: pulse 2s infinite;
 }
 
 @keyframes pulse {
-    0% {
-        background-color: #C5F5F0;
-    }
-    75% {
-        background-color: #f5c5ca;
-    }
-    100% {
-        background-color: #f1fdfb;
-    }
+    0% { width:4rem; } 
+	50% { width:8rem; } 
+	100% { width:4rem; }
 }
 
 /*********************Animations Stretch***************/
@@ -104,7 +98,7 @@ p.info {
     height: 10rem;
     margin: auto;
     margin-top: 1.25rem;
-    animation: stretch 3s ease-in 0s alternate 4 none running;
+    animation: stretch 3s ease-in 0s alternate infinite none running;
 }
 
 @keyframes stretch {
@@ -136,7 +130,7 @@ p.info {
     height: 5rem;
     margin: auto;
     margin-top: 1.25rem;
-    animation: nudge 2s linear 6 alternate;
+    animation: nudge 2s linear infinite alternate;
 }
 
 @keyframes nudge {
@@ -166,7 +160,7 @@ p.info {
     height: 10rem;
     margin: auto;
     margin-top: 1.25rem;
-    animation: skewx 3s 8 alternate;
+    animation: skewx 3s infinite alternate;
 }
 
 @keyframes skewx {
@@ -302,8 +296,9 @@ to {
 
 .flash #text {
     color: #f1fdfb;
-    font-size: 3rem;    
-    animation: flash linear 2s infinite; 
+    font-size: 4rem;    
+    animation: flash linear 2s infinite;
+
 }
 
 @keyframes flash {
